<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:id="@+id/signInParent"
    tools:context=".Fragments.PersonFrag.Authentication.RegistrationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivRegLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:layout_marginTop="18dp"
                android:layout_marginBottom="55dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />




            <com.andreabaccega.widget.FormEditText
                app:testType="regexp"
                app:customRegexp="[a-zA-Z0-9]{5,25}"
                app:testErrorString="username is too short or having any symbols"
                app:emptyErrorString="Cannot be empty"
                android:id="@+id/inputRegistrationUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:maxLines="1"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_person"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:hint="UserName-"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                android:tag="Username"

                />

            <TextView
                android:id="@+id/usernameErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:text="here is your error"
                android:paddingStart="35dp"
                android:textColor="#D61313"
                android:visibility="gone"/>


            <com.andreabaccega.widget.FormEditText
                app:testType="email"
                android:maxLines="1"
                app:emptyErrorString="Cannot be empty"
                app:testErrorString="Type valid email"
                android:id="@+id/inputEmailRegistration"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_mail"
                android:drawableLeft="@drawable/icon_mail"
                android:drawablePadding="10dp"
                android:hint="@string/emailReg"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                android:tag="Email"/>


            <com.andreabaccega.widget.FormEditText
                android:id="@+id/inputRegistrationPassword"
                app:testType="regexp"
                app:customRegexp="(.+){8,16}"
                app:testErrorString="Password must be more than 8 digits"
                app:emptyErrorString="Cannot be empty"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_password"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/passwordReg"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                android:tag="Password"/>

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/inputRegistrationConfirmPassword"
                android:layout_width="match_parent"
                android:maxLines="1"
                app:emptyErrorString="Cannot be empty"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_password"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/ConfirmPasswordReg"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                android:tag="Confirm Password"/>


            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btnsignup_gradient"
                android:text="@string/sign_upReg"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/signin_redirect"
                android:textColor="@color/gray" />

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/googleSignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/google_sign_up"
                android:layout_marginTop="30dp"/>




        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
